--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,11 @@ spring.jmx.enabled=false
 spring.security.user.name=admin
 spring.security.user.password=password
 
-spring.session.store-type=jdbc
+spring.session.store-type=redis
 spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:org/springframework/session/jdbc/schema-postgresql.sql
+
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
