Added OpenCV wrapper class for better testing and added test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,10 @@ spring.session.store-type=redis
 spring.sql.init.mode=never
 spring.sql.init.schema-locations=classpath:org/springframework/session/jdbc/schema-postgresql.sql
 
+app.images.base-dir=images
+opencv.model.path=trained_model.xml
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.type=redis
+spring.test.mockmvc.print=none
